Restyle Notification component

--- a/frontend/src/app/shared/overlay/notification/Notification.light.scss
+++ b/frontend/src/app/shared/overlay/notification/Notification.light.scss
@@ -1,7 +1,7 @@
 @import 'Notification.common';
 
-.notification__content {
-    box-shadow: 0 -3px 10px #000;
+.notification {
+    box-shadow: 0 -3px 5px #000;
     background-color: rgb(0, 0, 0);
     color: #fff;
 }
