--- a/frontend/src/app/shared/overlay/notification/Notification.common.scss
+++ b/frontend/src/app/shared/overlay/notification/Notification.common.scss
@@ -1,55 +1,50 @@
 .notification-container {
-    position: fixed;
+    position: absolute;
     width: 100vw;
     height: 100vh;
-    pointer-events: none;
     z-index: 1000;
     left: 0;
     top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    &.visible {
+        pointer-events: all;
+    }
+
+    &.hidden {
+        pointer-events: none;
+    }
 }
 
 .notification {
-    position: absolute;
+    position: relative;
+    max-width: 90vw;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    font-size: 3em;
+    padding: 20px 50px;
+    box-sizing: border-box;
+    min-height: 120px;
+    border-radius: 20px;
     z-index: 10000;
-    left: 0;
-    bottom: 0;
-    width: 100vw;
     animation-duration: 0.5s;
     animation-timing-function: ease;
     animation-iteration-count: 1;
-    pointer-events: all;
-
-    .icon-button {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-    }
-
-    &:empty {
-        display: none;
-    }
-
 }
 
-.notification.slide-in {
+.notification-container.visible .notification {
     animation-name: slide-in;
     transform: translateY(0);
     opacity: 1;
 }
 
-.notification.slide-out {
+.notification-container.hidden .notification {
     animation-name: slide-out;
     transform: translateY(100%);
     opacity: 0;
-}
-
-.notification__content {
-    text-align: center;
-    font-size: 45px !important;
-    padding: 20px 5px;
-    box-sizing: border-box;
-    width: 100%;
-    height: 120px;
 }
 
 @keyframes slide-in {
