--- a/frontend/src/app/shared/overlay/progress-indicator/ProgressIndicator.light.scss
+++ b/frontend/src/app/shared/overlay/progress-indicator/ProgressIndicator.light.scss
@@ -1,6 +1,6 @@
-@import 'Wait.common';
+@import 'ProgressIndicator.common';
 
-.wait .dot {
+.progress-indicator__dot {
     background-color: #fff;
     box-shadow: 0px 0px 3px 1px #bbb;
 }
