--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     flex-flow: column nowrap;
+    z-index: 1;
 }
 
 .topology-renderer__toolbox {
