--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -118,6 +118,10 @@ foreignObject.topology-renderer__canvas__symbol {
     pointer-events: none;
 }
 
+.topology-renderer__canvas__symbol.transformer {
+    pointer-events: stroke;
+}
+
 .topology-renderer__canvas__symbol.capacitor,
 .topology-renderer__canvas__symbol.transformer,
 .topology-renderer__canvas__symbol.regulator,
