--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
@@ -69,3 +69,8 @@
 .topology-renderer__canvas__symbol.solar-panel {
     fill: #add8e6;
 }
+
+
+.topology-renderer__canvas__symbol.battery {
+    stroke: #0f0;
+}
