--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.light.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.light.scss
@@ -65,3 +65,7 @@
 .topology-renderer__canvas__symbol.solar-panel {
     fill: #00f;
 }
+
+.topology-renderer__canvas__symbol.battery {
+    stroke: #006400;
+}
