--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -6,6 +6,16 @@
 
     &.small {
 
+        #normal-power-flow-indicator--switch .topology-renderer__canvas__arrow {
+            transform-origin: 10px 10px;
+            transform: rotate(45deg) scale(1.5) translate(-2px, -0.02px);
+        }
+
+        #reverse-power-flow-indicator--switch .topology-renderer__canvas__arrow {
+            transform-origin: 10px 10px;
+            transform: rotate(45deg) scale(1.5) translate(2.5px, 2.33px);
+        }
+
         .topology-renderer__canvas__edge.no-power {
             stroke-width: 2px;
         }
@@ -35,9 +45,37 @@
                 stroke-width: 1px;
             }
         }
+
     }
 
     &.large {
+
+        #normal-power-flow-indicator--edge,
+        #reverse-power-flow-indicator--edge {
+
+            .topology-renderer__canvas__arrow {
+                transform-origin: 10px 10px;
+                transform: scale(0.3, 0.3);
+            }
+        }
+
+        #normal-power-flow-indicator--capacitor,
+        #reverse-power-flow-indicator--capacitor {
+
+            .topology-renderer__canvas__arrow {
+                transform-origin: 3.5px 3.5px;
+                transform: scale(0.7, 0.7);
+            }
+        }
+
+        #normal-power-flow-indicator--switch,
+        #reverse-power-flow-indicator--switch {
+
+            .topology-renderer__canvas__arrow {
+                transform-origin: 10px 10px;
+                transform: rotate(45deg) scale(0.45) translate(0.2px, 0px);
+            }
+        }
 
         .topology-renderer__canvas__edge.no-power {
             stroke-width: 1px;
@@ -61,15 +99,6 @@
                 stroke-width: 0.6px;
             }
 
-        }
-
-    }
-
-    .topology-renderer__canvas__symbol.regulator {
-        marker-end: url(#arrow);
-
-        &.no-power {
-            marker-end: url(#red-arrow);
         }
 
     }
@@ -101,25 +130,19 @@
 .topology-renderer__canvas__edge {
     stroke-width: 0.2px;
     fill: none;
-}
+    stroke-linecap: round;
 
-.topology-renderer__canvas__symbol__image {
-    background-size: 100% 100%;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
+    &.normal-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-end: url(#normal-power-flow-indicator--edge);
+    }
+
+    &.inverse-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-start: url(#inverse-power-flow-indicator--edge);
+    }
 }
 
 .topology-renderer__non-existing-searched-node {
     color: #ffa500;
-}
-
-foreignObject.topology-renderer__canvas__symbol {
-    pointer-events: none;
-}
-
-.topology-renderer__canvas__symbol.transformer {
-    pointer-events: stroke;
 }
 
 .topology-renderer__canvas__symbol.capacitor,
@@ -128,4 +151,37 @@ foreignObject.topology-renderer__canvas__symbol {
 .topology-renderer__canvas__symbol.substation,
 .topology-renderer__canvas__symbol.battery {
     fill: transparent;
+    pointer-events: stroke;
+}
+
+.topology-renderer__canvas__symbol.regulator {
+    marker-end: url(#regulator-shape__arrow);
+    pointer-events: all !important;
+
+    &.no-power {
+        marker-end: url(#regulator-shape__red-arrow);
+    }
+
+}
+
+.topology-renderer__canvas__symbol.capacitor {
+
+    &.normal-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-end: url(#normal-power-flow-indicator--capacitor);
+    }
+
+    &.inverse-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-start: url(#inverse-power-flow-indicator--capacitor);
+    }
+}
+
+.topology-renderer__canvas__symbol.switch {
+
+    &.normal-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-end: url(#normal-power-flow-indicator--switch);
+    }
+
+    &.inverse-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-start: url(#inverse-power-flow-indicator--switch);
+    }
 }
