--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -5,7 +5,6 @@
     overflow: hidden;
 
     &.small {
-
         #normal-power-flow-indicator--switch .topology-renderer__canvas__arrow {
             transform-origin: 10px 10px;
             transform: rotate(45deg) scale(1.5) translate(-2px, -0.02px);
@@ -105,6 +104,13 @@
 
 }
 
+#normal-power-flow-indicator--transformer,
+#reverse-power-flow-indicator--transformer {
+    .topology-renderer__canvas__arrow {
+        fill: none;
+    }
+}
+
 .topology-renderer__canvas {
     width: 100%;
     height: 100%;
@@ -161,11 +167,9 @@
     &.no-power {
         marker-end: url(#regulator-shape__red-arrow);
     }
-
 }
 
 .topology-renderer__canvas__symbol.capacitor {
-
     &.normal-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
         marker-end: url(#normal-power-flow-indicator--capacitor);
     }
@@ -184,4 +188,27 @@
     &.inverse-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
         marker-start: url(#inverse-power-flow-indicator--switch);
     }
+}
+
+.topology-renderer__canvas__symbol.transformer {
+
+    &.normal-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-end: url(#normal-power-flow-indicator--transformer);
+    }
+
+    &.inverse-power-flow-direction:not(.no-power-flow-direction-indicator):not(.no-power) {
+        marker-start: url(#inverse-power-flow-indicator--transformer);
+    }
+}
+
+.topology-renderer__toolbox__toggle-power-direction-indicator.off::after {
+    content: '';
+    position: absolute;
+    width: 85%;
+    height: 2px;
+    background-color: white;
+    transform: rotate(45deg);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 10px;
 }
