--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
@@ -19,7 +19,7 @@
             stroke: #f00;
         }
 
-        .topology-renderer__canvas__symbol.no-power.switch {
+        .topology-renderer__canvas__symbol.switch.no-power {
             fill: #f00;
         }
     }
@@ -73,4 +73,8 @@
 
 .topology-renderer__canvas__symbol.battery {
     stroke: #0f0;
+}
+
+.topology-renderer__toolbox__toggle-power-direction-indicator.off::after {
+    border-color: #607d8b;
 }
