[GOSS-GridAPPS-D#1228] Add the ability to automatically pause a running simulation after a delay

--- a/frontend/src/app/shared/buttons/basic-button/BasicButton.dark.scss
+++ b/frontend/src/app/shared/buttons/basic-button/BasicButton.dark.scss
@@ -2,7 +2,7 @@
 @import 'BasicButton.common';
 
 button {
-    background-color: $theme-color;
+    background-color: transparent;
 }
 
 button.negative {
