--- a/frontend/src/app/shared/overlay/portal-renderer/PortalRenderer.common.scss
+++ b/frontend/src/app/shared/overlay/portal-renderer/PortalRenderer.common.scss
@@ -1,5 +1,10 @@
 .portal-renderer {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: 15;
 }
