--- a/frontend/src/app/simulation/simulation-control/SimulationControl.light.scss
+++ b/frontend/src/app/simulation/simulation-control/SimulationControl.light.scss
@@ -13,3 +13,56 @@
     color: #000;
     padding: 6px 5px;
 }
+
+.simulation-control__delayed-pause-duration-input {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3),
+        0 -0.5px 1px rgba(0, 0, 0, 0.2);
+    background-color: #555;
+    color: #fff;
+    border: 1px solid #8e8e8e;
+
+    &__arrow::after {
+        background-color: #555;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+        border: 1px solid #8e8e8e;
+    }
+
+    .form-control__label {
+        color: #ff6398;
+    }
+
+    .form-control__label__hint {
+        color: rgba(255, 255, 255, 0.5);
+    }
+
+    .input-field-wrapper::after {
+        color: rgba(255, 255, 255, 0.5);
+    }
+
+    .input-field__input {
+        color: #fff;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+    }
+
+    .input-field__ripple-bar {
+        background-color: #fff;
+    }
+
+    .basic-button.negative {
+        color: rgba(255, 255, 255, 0.7);
+
+        &:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+    }
+
+    .basic-button.positive {
+        color: #fff;
+        background-color: #e91e63;
+
+        &:hover {
+            box-shadow: 1px 6px 15px black;
+        }
+    }
+}
