[GRIDAPPSD/GOSS-GridAPPS-D#1259] Show "Simulation starting" message before simulation is started and hide the Pause/Stop buttons

--- a/frontend/src/app/simulation/simulation-control/SimulationControl.common.scss
+++ b/frontend/src/app/simulation/simulation-control/SimulationControl.common.scss
@@ -50,6 +50,12 @@
     cursor: pointer;
 }
 
+.simulation-control__simulation-starting-message {
+    display: inline-block;
+    font-size: 1em;
+    white-space: nowrap;
+}
+
 .simulation-control__action {
     z-index: 1;
 
