--- a/frontend/src/app/simulation/voltage-violation/VoltageViolation.common.scss
+++ b/frontend/src/app/simulation/voltage-violation/VoltageViolation.common.scss
@@ -27,9 +27,14 @@
         position: absolute;
         top: 0;
         right: 0;
+        color: #fff;
     }
 
     table {
         display: none;
+    }
+
+    tr {
+        background-color: transparent !important;
     }
 }
