--- a/frontend/src/app/simulation/simulation-control/SimulationControl.dark.scss
+++ b/frontend/src/app/simulation/simulation-control/SimulationControl.dark.scss
@@ -19,6 +19,10 @@
     transform: translateX(-2px);
 }
 
+.simulation-control__simulation-starting-message {
+    color: #fff;
+}
+
 .simulation-control__delayed-pause-duration-input {
     box-shadow: 0 1px 3px #271e1e, 0 -0.5px 3px #271e1e;
     background-color: #555;
