--- a/frontend/src/app/simulation/simulation-control/SimulationControl.light.scss
+++ b/frontend/src/app/simulation/simulation-control/SimulationControl.light.scss
@@ -14,6 +14,10 @@
     padding: 6px 5px;
 }
 
+.simulation-control__simulation-starting-message {
+    color: #000;
+}
+
 .simulation-control__delayed-pause-duration-input {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3),
         0 -0.5px 1px rgba(0, 0, 0, 0.2);
