--- a/frontend/src/app/data-browser/DataBrowser.light.scss
+++ b/frontend/src/app/data-browser/DataBrowser.light.scss
@@ -18,7 +18,7 @@
     }
 }
 
-.request-editor,
-.response {
+.data-browser__request-editor,
+.data-browser__response {
     box-shadow: 0 0 2px #888;
 }
