--- a/frontend/src/app/simulation/simulation-control/SimulationControl.common.scss
+++ b/frontend/src/app/simulation/simulation-control/SimulationControl.common.scss
@@ -11,7 +11,6 @@
 
 .simulation-control__simulation-id {
     display: inline-flex;
-    width: 100%;
     justify-content: flex-start;
     box-sizing: border-box;
     padding-left: 10px;
@@ -50,7 +49,9 @@
     cursor: pointer;
 }
 
-.simulation-control__simulation-starting-message {
+.simulation-control__simulation-is-starting-message {
+    position: relative;
+    margin-left: auto;
     display: inline-block;
     font-size: 1em;
     white-space: nowrap;
@@ -61,6 +62,10 @@
 
     &:not(:last-of-type) {
         margin-right: 5px;
+
+        &:first-of-type {
+            margin-left: auto;
+        }
     }
 }
 
