Add more rounded corners to UI components

--- a/frontend/src/app/App.common.scss
+++ b/frontend/src/app/App.common.scss
@@ -10,6 +10,12 @@
     &>div:first-of-type {
         width: 70vw;
         position: relative;
+
+        .tab-group__body {
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
+            border-top-left-radius: 0;
+        }
     }
 }
 
