--- a/frontend/src/app/simulation/simulation-configuration/views/simulation-configuration-tab/SimulationConfigurationTab.common.scss
+++ b/frontend/src/app/simulation/simulation-configuration/views/simulation-configuration-tab/SimulationConfigurationTab.common.scss
@@ -1,3 +1,7 @@
+.simulation-configuration-tab .form-control__label {
+    width: 250px;
+}
+
 .realtime-checkbox-container {
     position: relative;
     display: flex;
