--- a/frontend/src/app/shared/form/textarea/TextArea.common.scss
+++ b/frontend/src/app/shared/form/textarea/TextArea.common.scss
@@ -28,14 +28,13 @@
     vertical-align: top;
     display: inline-block;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .textarea__input-box {
     width: 100%;
     height: 100%;
     max-height: 100%;
-    box-sizing: border-box;
-    border-radius: 3px;
     overflow-y: auto;
     white-space: pre;
     vertical-align: top;
@@ -65,6 +64,8 @@
         position: absolute;
         display: inline-block;
         transition: transform 0.4s 0s ease;
+        z-index: 15;
+        pointer-events: none;
     }
 
     &::before {
@@ -130,6 +131,7 @@
     width: 10px;
     height: 10px;
     cursor: nwse-resize;
+    border-bottom-right-radius: 5px;
 }
 
 .form-control.disabled .textarea__input-box-container {
