--- a/frontend/src/app/shared/overlay/dialog/Dialog.common.scss
+++ b/frontend/src/app/shared/overlay/dialog/Dialog.common.scss
@@ -24,7 +24,8 @@
     animation-fill-mode: forwards;
     max-width: 100vw;
     max-height: 100vh;
-    border-radius: 5px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .dialog--entering {
