--- a/frontend/src/app/shared/overlay/notification/Notification.light.scss
+++ b/frontend/src/app/shared/overlay/notification/Notification.light.scss
@@ -1,7 +1,7 @@
 @import 'Notification.common';
 
 .notification {
-    box-shadow: 0 -3px 5px #000;
-    background-color: rgb(0, 0, 0);
+    box-shadow: 0 0 5px #3c3c3c;
+    background-color: #403636;
     color: #fff;
 }
