--- a/frontend/src/app/simulation/measurement-chart/MeasurementChart.dark.scss
+++ b/frontend/src/app/simulation/measurement-chart/MeasurementChart.dark.scss
@@ -24,7 +24,7 @@ $time-series-colors: #fff #ff0 lightblue #f0f4c3 orange #00ff5f magenta brown li
 
 .measurement-chart__legend {
     background-color: $theme-color;
-    box-shadow: 0 0 2px #ddd;
+    border: 2px solid #808080;
 }
 
 .measurement-chart__legend__label {
