--- a/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLogger.common.scss
+++ b/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLogger.common.scss
@@ -15,6 +15,7 @@
     top: -29px;
     width: 100%;
     pointer-events: none;
+    z-index: 5;
 }
 
 .simulation-status-logger__header__label {
@@ -25,6 +26,7 @@
     display: inline-block;
     padding: 7px 15px;
     font-size: 13px;
+    border-top-right-radius: 10px;
 }
 
 .simulation-status-logger__header__legends {
@@ -32,6 +34,7 @@
     box-sizing: border-box;
     padding: 5px;
     margin-left: auto;
+    border-top-left-radius: 10px;
 }
 
 .simulation-status-logger__header__legends__level {
@@ -53,6 +56,7 @@
 }
 
 .simulation-status-logger__body {
+    position: relative;
     max-height: 100%;
     height: 100%;
     overflow: hidden auto;
