--- a/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLogger.light.scss
+++ b/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLogger.light.scss
@@ -4,12 +4,12 @@
 .simulation-status-logger__header__label {
     background-color: $primary-color;
     color: $primary-text-color;
-    border-top-right-radius: 3px;
+    box-shadow: 0 0 2px #555;
 }
 
 .simulation-status-logger__header__legends {
     background-color: #a29494;
-    box-shadow: 0px -0.5px 2px #555;
+    box-shadow: 0 0 2px #555;
 }
 
 $logLevels: FATAL ERROR WARN INFO DEBUG TRACE;
