Use IndexedDB to store log messages and implement custom data structures to improve performance during a simulation

--- a/frontend/src/app/shared/buttons/basic-button/BasicButton.common.scss
+++ b/frontend/src/app/shared/buttons/basic-button/BasicButton.common.scss
@@ -5,6 +5,9 @@ button {
     border-radius: 50px;
     cursor: pointer;
     position: relative;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 button.negative,
