--- a/frontend/src/app/shared/paginator/Paginator.dark.scss
+++ b/frontend/src/app/shared/paginator/Paginator.dark.scss
@@ -12,6 +12,7 @@
 .paginator__page-indicator__current-page-input {
     color: #fff;
     border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: #676767;
 
     &:focus {
         border-color: #fff;
