--- a/frontend/src/app/shared/paginator/Paginator.light.scss
+++ b/frontend/src/app/shared/paginator/Paginator.light.scss
@@ -6,6 +6,7 @@
 
 .paginator__page-indicator__current-page-input {
     border: 2px solid rgba(#555, 0.25);
+    background-color: #fff1f1;
 
     &:focus {
         border-color: #555;
