--- a/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLogger.light.scss
+++ b/frontend/src/app/simulation/simulation-status-logger/SimulationStatusLogger.light.scss
@@ -4,19 +4,18 @@
 .simulation-status-logger__header__label {
     background-color: $primary-color;
     color: $primary-text-color;
-    box-shadow: 0 0 2px #555;
 }
 
 .simulation-status-logger__header__legends {
     background-color: #a29494;
-    box-shadow: 0 0 2px #555;
+    box-shadow: 0px -0.5px 2px #555;
 }
 
 $logLevels: FATAL ERROR WARN INFO DEBUG TRACE;
 $logLevelColors: #B71C1C #D32F2F #FFFF00 #F0F4C3 #E1F5FE #C0CA33;
 
 @for $index from 1 through length($logLevels) {
-    .simulation-status-logger__header__legends__level__color.#{nth($logLevels, $index)} {
+    .simulation-status-logger__header__legends__level.#{nth($logLevels, $index)} .simulation-status-logger__header__legends__level__color {
         background-color: #{nth($logLevelColors, $index)};
     }
 }
@@ -32,4 +31,9 @@ $logLevelColors: #B71C1C #D32F2F #FFFF00 #F0F4C3 #E1F5FE #C0CA33;
 .simulation-status-logger__body {
     background-color: scale-color($theme-color, $lightness: -5%);
     box-shadow: 0 -1px 5px #ccc;
+}
+
+.simulation-status-logger .paginator {
+    background-color: $theme-color;
+    box-shadow: 0 0 3px #9a9a9a, 0 2px 2px #9a9a9a;
 }
