--- a/frontend/src/app/simulation/voltage-violation/VoltageViolation.dark.scss
+++ b/frontend/src/app/simulation/voltage-violation/VoltageViolation.dark.scss
@@ -2,6 +2,12 @@
 
 .voltage-violation {
     color: #fff;
+
+    table td:first-child>div {
+        color: #ffa;
+        font-weight: bold;
+    }
+
 }
 
 .voltage-violation__label,
