--- a/frontend/src/app/navigation/views/drawer/DrawerItem.common.scss
+++ b/frontend/src/app/navigation/views/drawer/DrawerItem.common.scss
@@ -18,7 +18,7 @@
     box-sizing: border-box;
 }
 
-.drawer-item-icon {
+.drawer-item .drawer-item-icon {
     margin-right: 20px;
     margin-left: 15px;
     font-size: 1.5em;
