Add a new setting to settings UI that allows toggling logging

--- a/frontend/src/app/settings/Settings.common.scss
+++ b/frontend/src/app/settings/Settings.common.scss
@@ -20,6 +20,10 @@
         &__action {
             position: relative;
             margin-left: auto;
+
+            &.toggle-logging {
+                transform: translate(-13px, 0px);
+            }
         }
     }
 }
