Update the API to open notifications

--- a/frontend/src/app/settings/Settings.dark.scss
+++ b/frontend/src/app/settings/Settings.dark.scss
@@ -2,10 +2,10 @@
 @import 'Settings.common';
 
 .settings__trigger {
-    color: #fff !important;
+    color: #ff0 !important;
 
     .ripple-effect {
-        background-color: #fff;
+        background-color: #ff0;
     }
 }
 
